<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4A1D7E">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-33dp"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:paddingBottom="20dp"
                android:text="@string/score"
                android:gravity="center"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="124dp"
                android:layout_height="52dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="117dp"
                android:background="@drawable/round_button"
                android:text="@string/button"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/highscore"
                app:layout_constraintVertical_bias="0.711"
                app:layout_constraintCircleRadius="5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/textview"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/dancing_script_bold" />

</RelativeLayout>