<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#4A1D7E">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignTop="@id/card"
        android:layout_marginTop="-150dp"
        app:cardBackgroundColor="#4A1D7E">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/radio_group"
                android:layout_gravity="center"
                android:freezesText="true"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:text="Question is here"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="20dp" />
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card"
        android:layout_height="386dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-33dp"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="392dp">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="359dp"
                android:layout_height="146dp"
                android:layout_centerVertical="true"
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:freezesText="true"
                    android:text="Option 1" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:freezesText="true"
                    android:text="Option 2" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:freezesText="true"
                    android:text="Option 3" />
            </RadioGroup>

            <Button
                android:id="@+id/confirm"
                android:layout_width="124dp"
                android:layout_height="52dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="88dp"
                android:background="@drawable/round_button"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Confirm"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/highscore"
                app:layout_constraintVertical_bias="0.711" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:freezesText="true"
        android:text="@string/score1"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewScore"
        android:layout_marginTop="0dp"
        android:freezesText="true"
        android:text="@string/question"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:textColor="@android:color/background_light"
        android:text="@string/timer"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>